--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -161,14 +161,17 @@ sup {
 }
 
 a {
-  color: #007bff;
+  /*color: #007bff;*/
+  color: #539448;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-  color: #0056b3;
+  /*color: #0056b3;*/
+  color: #75d964;
+  /*color: #bcf2b3;*/
   text-decoration: underline;
 }
 
